Adding main endpoint

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "git://github.com/fantactuka/role.git"
+    "url": "git://github.com/fantactuka/role.git",
+    "main": "role.js"
   }
 }
